--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ flake8 = "^4.0.1"
 isort = "^5.10.1"
 mypy = "^0.910"
 pytest = "^6.2.5"
+types-requests = "^2.26.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
