--- a/ci/pyproject.toml
+++ b/ci/pyproject.toml
@@ -1,3 +1,30 @@
+[tool.poetry]
+name = "minecraft-servers"
+version = "0.1.0"
+description = "Automatically updated Minecraft servers"
+authors = ["Joel <joel@joel.tokyo>"]
+license = "MIT"
+
+[tool.poetry.dependencies]
+python = "^3.7"
+dataclasses-json = "^0.5.6"
+python-jenkins = "^1.7.0"
+requests = "^2.27.1"
+rich = "^11.2.0"
+
+[tool.poetry.dev-dependencies]
+black = "^22.1.0"
+flake8 = "^4.0.1"
+isort = "^5.10.1"
+mypy = "^0.931"
+pytest = "^7.0.1"
+pytest-cov = "^3.0.0"
+types-requests = "^2.27.9"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.isort]
 profile = "black"
 lines_after_imports = 2
