--- a/ci/pyproject.toml
+++ b/ci/pyproject.toml
@@ -21,6 +21,9 @@ pytest = "^7.0.1"
 pytest-cov = "^3.0.0"
 types-requests = "^2.27.9"
 
+[tool.poetry.scripts]
+minecraft-servers = "minecraft_servers.__main__:main"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
