--- a/ci/pyproject.toml
+++ b/ci/pyproject.toml
@@ -11,6 +11,7 @@ dataclasses-json = "^0.5.6"
 python-jenkins = "^1.7.0"
 requests = "^2.27.1"
 rich = "^11.2.0"
+aiohttp = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
