--- a/ci/pyproject.toml
+++ b/ci/pyproject.toml
@@ -12,6 +12,7 @@ python-jenkins = "^1.7.0"
 requests = "^2.27.1"
 rich = "^11.2.0"
 aiohttp = "^3.8.1"
+semantic-version = "^2.9.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
