--- a/ci/pyproject.toml
+++ b/ci/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.27.1"
 rich = "^11.2.0"
 aiohttp = "^3.8.1"
 semantic-version = "^2.9.0"
+platformdirs = "^2.5.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
