ci: set update packages job to only run in main repo

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   packages:
+    if: github.repository == 'jyooru/nix-minecraft-servers'
     defaults:
       run:
         working-directory: ci
